syntax = "proto3";

package player;
option go_package="/proto"; // 自动生成文件所在的目录 eg: proto/*.pb.go

message CreateUserReq{
  string  UserName=1;
  string  Password=2;
}

message CreateUserResp{

}

message LoginReq{
  string  UserName=1;
  string  Password=2;
}

message LoginResp{
  string Ok = 1;
}

message AddFriendReq{
  uint64 UId = 1;
}

message AddFriendResp{
  string Desc = 1;
}

message DelFriendReq{
  uint64 UId = 1; // 玩家Id
}

message DelFriendResp{
  string Desc = 1; // 请求成功与否描述
}

message ChatMessage{
  string Content =1;
  repeated bytes  extra=2;
}

//聊天请求
message SendChatMsgReq{
  uint64  UId =1;
  ChatMessage msg=2;
  int32  Category =3; // 聊天类型
}

message SendChatMsgResp{
  uint64  UId =1;
  ChatMessage msg=2;
}

